tests/typecheck/should_compile/T18118.hs
module T18118 (myfun) where

import T18118A

{-# SPECIALISE myfun :: Double #-}
