tests/typecheck/should_fail/T20588_aux.hs
module T20588_aux where

import {-# SOURCE #-} T20588

